--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "git/gitignore"]
 	path = git/gitignore
-	url = git://github.com/github/gitignore.git
+	url = git@github.com:dekom/gitignore.git
 [submodule "zsh/oh-my-zsh"]
 	path = zsh/oh-my-zsh
-	url = git://github.com/dekom/oh-my-zsh.git
+	url = git@github.com:dekom/oh-my-zsh.git
 [submodule "vim/bundle/vundle"]
 	path = vim/bundle/vundle
 	url = https://github.com/gmarik/vundle.git
