--- a/i3/config
+++ b/i3/config
@@ -24,11 +24,12 @@ font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 floating_modifier $mod
 
 # personal keybindings
+bindsym $mod+z move scratchpad
 bindsym $mod+minus scratchpad show
 bindsym $mod+c exec quickswitch.py
 
 # start a terminal
-bindsym $mod+Return exec xterm
+bindsym $mod+Return exec --no-startup-id xterm
 
 # kill focused window
 bindsym $mod+Shift+q kill
