Add autostart applications

--- a/i3/config
+++ b/i3/config
@@ -149,3 +149,8 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+# Autostart Applications
+exec --no-startup-id nm-applet
+exec --no-startup-id skype
+exec --no-startup-id sh ~/.fehbg
