--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,7 @@ floating_modifier $mod
 # personal keybindings
 bindsym $mod+shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
-bindsym $mod+c exec quickswitch.py
+bindsym $mod+c exec --no-startup-id quickswitch.py
 
 # start a terminal
 bindsym $mod+Return exec --no-startup-id xterm
@@ -35,7 +35,7 @@ bindsym $mod+Return exec --no-startup-id xterm
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id dmenu_run
 
 # change focus
 bindsym $mod+h focus left
