--- a/i3/config
+++ b/i3/config
@@ -13,20 +13,27 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+#font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose an xft font, such as:
-# font xft:DejaVu Sans Mono 10
+font xft:DejaVu Sans Mono 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# personal keybindings
+# Scratchpad keybinding
 bindsym $mod+shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
+
+# Applications keybindings
 bindsym $mod+c exec --no-startup-id quickswitch.py
+bindsym $mod+g exec --no-startup-id chromium
+bindsym $mod+shift+g exec --no-startup-id chromium -incognito
+
+# System Lock
+bindsym $mod+ctrl+shift+l exec i3lock && sudo pm-suspend
 
 # start a terminal
 bindsym $mod+Return exec --no-startup-id xterm
