--- a/i3/config
+++ b/i3/config
@@ -160,7 +160,8 @@ bar {
 }
 
 # Autostart Applications
+exec --no-startup-id sh ~/.fehbg
 exec --no-startup-id nm-applet
 exec --no-startup-id skype
-exec --no-startup-id sh ~/.fehbg
 exec --no-startup-id dropboxd
+exec --no-startup-id volumeicon
