Add additional startup applications

--- a/i3/config
+++ b/i3/config
@@ -165,3 +165,5 @@ exec --no-startup-id nm-applet
 exec --no-startup-id skype
 exec --no-startup-id dropboxd
 exec --no-startup-id volumeicon
+exec --no-startup-id ibus-daemon
+exec --no-startup-id fluxgui
