--- a/i3/config
+++ b/i3/config
@@ -166,4 +166,4 @@ exec --no-startup-id skype
 exec --no-startup-id dropboxd
 exec --no-startup-id volumeicon
 exec --no-startup-id ibus-daemon
-exec --no-startup-id fluxgui
+exec --no-startup-id redshift
