--- a/i3/config
+++ b/i3/config
@@ -24,13 +24,8 @@ font xft:DejaVu Sans Mono 8
 floating_modifier $mod
 
 # Scratchpad keybinding
-bindsym $mod+shift+minus move scratchpad
-bindsym $mod+minus scratchpad show
-
-# Applications keybindings
-bindsym $mod+c exec --no-startup-id quickswitch.py
-bindsym $mod+g exec --no-startup-id chromium
-bindsym $mod+shift+g exec --no-startup-id chromium -incognito
+bindsym $mod+shift+period move scratchpad
+bindsym $mod+period scratchpad show
 
 # System keybindings
 bindsym $mod+ctrl+shift+l exec --no-startup-id "i3lock && sudo pm-suspend"
@@ -71,10 +66,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+o split h
+bindsym $mod+minus split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+bindsym $mod+backslash split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen
@@ -94,9 +89,10 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindcode $mod+d focus child
+bindcode $mod+z focus child
 
 # switch to workspace
+bindsym $mod+grave workspace 0
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
 bindsym $mod+3 workspace 3
@@ -109,6 +105,7 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
+bindsym $mod+Shift+grave move container to workspace 0
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+2 move container to workspace 2
 bindsym $mod+Shift+3 move container to workspace 3
@@ -156,13 +153,13 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+  position top
   status_command i3status
 }
 
 # Autostart Applications
 exec --no-startup-id sh ~/.fehbg
 exec --no-startup-id nm-applet
-exec --no-startup-id skype
 exec --no-startup-id volumeicon
 exec --no-startup-id ibus-daemon
 exec --no-startup-id redshift
